<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/telaJogo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/fundo_aquario"
        app:srcCompat="@drawable/fundo_aquario" />

    <!-- Placar e Tempo -->
    <TextView
        android:id="@+id/txtPontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:text="@string/pontos_0"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:text="@string/tempo_60s"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgCesta"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/visual_cesta" />

    <ImageView
        android:id="@+id/imgCesta2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/visual_cesta"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/imgEsfera"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:src="@drawable/visual_esfera" />

    <!-- Painel de Fim de Jogo (Invisível no início) -->
    <LinearLayout
        android:id="@+id/FimDeJogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#CC000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtMensagemFim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vit_ria"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReiniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/de_novo" />

            <Button
                android:id="@+id/btnSair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sair" />
        </LinearLayout>
    </LinearLayout>

    <!-- Tela de Título -->
    <RelativeLayout
        android:id="@+id/telaTitulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/imagem_titulo"
            android:scaleType="fitXY"
            android:contentDescription="@null" />

        <Button
            android:id="@+id/btnJogar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="JOGAR"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>